# ch_logistics

./: .gitignore  README.md  install_on_bench.sh  license.txt  pyproject.toml
ch_logistics/: _create_test_driver.py  _e2e_optimizer_test.py  _e2e_pos_multi_pickup.py  _e2e_tracking_test.py  hooks.py  modules.txt  patches.txt  roles.py  scope_guard.py  setup.py
ch_logistics/api/: buyback_logistics_bridge.py  customer_tracking.py  digest.py  driver_api.py  driver_push.py  driver_resolver.py  driver_status.py  fcm.py  logistics_api.py  maps_api.py  optimizer.py  permissions.py  rejection_api.py  report_utils.py  tracking_api.py  transfer_manifest_api.py  trip_lock.py
ch_logistics/patches/v0_0_1/: install_driver_geo_fields.py
ch_logistics/patches/v0_0_10/: sync_store_geo_to_warehouses.py
ch_logistics/patches/v0_0_11/: backfill_stop_qr_tokens.py
ch_logistics/patches/v0_0_12/: rotate_manifest_qr_tokens.py
ch_logistics/patches/v0_0_13/: __init__.py  protect_proof_credentials.py
ch_logistics/patches/v0_0_2/: rebind_logistics_module.py
ch_logistics/patches/v0_0_3/: install_driver_app_fields.py  install_logistics_phase2_fields.py
ch_logistics/patches/v0_0_4/: install_geo_optimization_fields.py
ch_logistics/patches/v0_0_8/: seed_gogizmo_stores.py
ch_logistics/smoke/: driver_state_recomputer.py  driver_visibility.py
ch_logistics/tests/: _proof_smoke.py  test_bundle_pickup_qr_ui_flow.py  test_bundle_qr_driver_flow.py  test_clubbed_transfers_e2e.py  test_fcm_push_e2e.py  test_lifecycle_e2e.py  test_release_security_boundaries.py  test_report_scope_ch_logistics.py
(+92 files in other folders)
