[project]
name = "ch_logistics"
authors = [
    { name = "GoStack", email = "admin@gofix.in"}
]
description = "Logistics driver app, trip management, live GPS tracking & manifest delivery for the CH suite."
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # Firebase Admin SDK — HTTP v1 push transport (ch_logistics.api.fcm).
    # Optional at runtime (the transport no-ops if absent), required to send.
    "firebase-admin>=6.5",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
erpnext = ">=15.0.0"
ch_erp15 = ">=0.0.1"
